# seank-rust-study-codes

./: .gitignore  Cargo.toml  readme.md
actix_web_study/: Cargo.toml
actix_web_study/examples/: greet_simple_example.rs
actix_web_study/src/: main.rs
aws-rust-lambda-uk-weather/uk-weather-forecast-lambda/: .env  Cargo.toml  README.md  invoke_local_lambda.sh  run_local.sh
aws-rust-lambda-uk-weather/uk-weather-forecast-lambda/src/: main.rs  main_tests.rs
aws-rust-lambda-uk-weather/uk-weather-forecast-lambda/test_data/: london_weather_response.json  paris_weather_response.json
chat_program_study/: Cargo.toml  study.txt
chat_program_study/src/: lib.rs  utils.rs
code_example_study/: Cargo.toml
code_example_study/examples/: async_await_example.rs  closure.rs  concurrency.rs  find_and_replace.rs  immutable_mutable_borrow.rs  intended_error_handling.rs  lib.rs  main_arc.rs  main_big_file.rs  main_box.rs  main_rc.rs  main_rc2.rs  main_smarter_point_step1.rs  main_smarter_point_step2.rs  pathbuf.rs  playground.rs  reference_borrowing.rs  reference_borrowing_experinment2.rs  result_question_mark_and_unwrap.rs  selection_sort.rs  simple_mutex_example.rs  studying_of_lucianos_advent_code_ver1.rs  studying_of_lucianos_advent_code_ver2.rs  trait_examples.rs  trait_examples2.rs  unsafe_code_and_raw_pointer.rs
codewars_kata_training/: Cargo.toml
my-qustions-and-answers/: Adding tokio dependency for async sleep function  Builder and Typestate Patterns in Rust for Distillation Column Simulation  Clarifying Rust's References and Borrowing  Comparing Mutex and Semaphore Synchronization Mechanisms  Declaring a string reference variable in Rust  Defining a Rust Struct Using Fields from Another Struct  Exploring Rc and reference counting in Rust  Mapping SQL query results to Rust struct with roles  Rust Differences Between Copy and Clone Methods in Rust  Rust and C++ Interoperability with cxx  Rust enum variants without field names  Rust error when mutating vector while borrowing immutably in for loop  Rust future types and await in test codes  Rust primitive integer type prefixes: i and u  Rust vector ownership after len() method call  Static and dynamic dispatch code examples in Rust  String Parsing Question  Understanding Rust closure traits, lifetimes, and concurrency concepts from code examples  Understanding the &[i32] Type in Rust  Very Lengthy Rust QA  Why do Rust developers leave the last comma in lists and tuples  dyn trait and &dyn trait
my_qustions_and_ai_answers/:  the concepts of free and malloc in c help Rust programming  BTreeMap's significance in Rust and Java TreeMap  Basic but very tricky rust questions  Bringing Async C++ Code to Rust's Safe Grounds  Codewars Rust programming tips  Comparing Mutex and Semaphore synchronization primitives in Rust  Converting f32 to i32 in Rust  Deref Coercion  Dereferencing a smart pointer  Difference between dyn MyTrait and T_clons_MyTrait in Rust  Differences Between eprintln! and println! in Rust  Does Rust have groupBy method  Is tokio main macro a Task in Rust  (+53 more)
my_tonic_project/: Cargo.toml  README.md  build.rs  config.toml
my_tonic_project/proto/: service.proto
my_tonic_project/src/: client.rs  config.rs  mock_server.rs
(+21 files in other folders)
