[package]
name = "seank-rust-study-code"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["chat_program_study", "code_example_study", "codewars_kata_training", "rust_tdd_example_study_1", "actix_web_study", "my_tonic_project", "aws-rust-lambda-uk-weather/uk-weather-forecast-lambda"]

exclude = ["rust_tdd_example_study_2"]

[dependencies]
