[package]
name = "uk-weather-forecast-lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
aws_lambda_events = { version = "0.15.1", default-features = false, features = ["eventbridge"] }
lambda_runtime = "0.12.0"
tokio = { version = "1", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.5", features = ["json"] }
anyhow = "1.0"
aws-config = "1.5.4"
aws-sdk-ses = "1.36.0"
chrono = "0.4"
openssl = { version = "0.10.65", features = ["vendored"] }
http = "1.1.0"
async-trait = "0.1.81"

[dev-dependencies]
mockall = "0.13.0"
http = "1.1.0"
chrono = { version = "0.4", features = ["clock"] }
tokio = { version = "1.0", features = ["full"] }
aws-config = { version = "1.5.4", features = ["behavior-version-latest"] }
aws-sdk-ses = { version = "1.36.0", features = ["behavior-version-latest"] }
